// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<Layout
  style={
    Object {
      "paddingTop": 4,
    }
  }
/>
`;

exports[`loading 1`] = `
<Layout
  style={
    Object {
      "paddingTop": 0,
    }
  }
>
  <Spinner
    bar={true}
  />
</Layout>
`;

exports[`withData 1`] = `
<Layout
  style={
    Object {
      "paddingTop": 4,
    }
  }
>
  <View
    data={
      Array [
        "a",
        "b",
        "c",
      ]
    }
  />
</Layout>
`;

exports[`withError 1`] = `
<Layout
  style={
    Object {
      "paddingTop": 4,
    }
  }
>
  <withTheme(Text)>
    Error: 
    "Boom!"
  </withTheme(Text)>
</Layout>
`;
